registeration form improved
