# db/src/schema/users.ts
@@ -11,9 +11,13 @@ export const usersTable = pgTable("users", {
   role: text("role").notNull().default("student"),
   phone: text("phone"),
   cnic: text("cnic"),
+  dob: timestamp("dob", { withTimezone: true }),
   avatar: text("avatar"),
   qualification: text("qualification"),
   specialization: text("specialization"),
+  obtainedMarks: integer("obtained_marks"),
+  totalMarks: integer("total_marks"),
+  educationDocumentUrl: text("education_document_url"),
   experience: text("experience"),
   salary: integer("salary"),
   address: text("address"),
